--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "api",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
-  }
+    "name": "steamlibrarycompare-api",
+    "version": "0.1.0",
+    "scripts": {
+        "build": "tsc --project ./",
+        "watch": "tsc-watch --project ./",
+        "dev": "npm run watch -- --onSuccess \"node ./build/app.js\"",
+        "lint": "eslint . --ext .ts,.tsx"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.12",
+        "@types/node": "^15.12.4",
+        "@typescript-eslint/eslint-plugin": "^4.28.0",
+        "@typescript-eslint/parser": "^4.28.0",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "express": "^4.17.1",
+        "prettier": "^2.3.1",
+        "tsc-watch": "^4.4.0",
+        "typescript": "^4.3.4"
+    }
 }
