--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,12 @@
         "dev": "npm run watch -- --onSuccess \"node ./build/app.js\"",
         "lint": "eslint . --ext .ts,.tsx"
     },
+    "dependencies": {
+        "express": "^4.17.1",
+        "cors": "^2.8.5"
+    },
     "devDependencies": {
+        "@types/cors": "^2.8.10",
         "@types/express": "^4.17.12",
         "@types/node": "^15.12.4",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
@@ -15,7 +20,6 @@
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
-        "express": "^4.17.1",
         "prettier": "^2.3.1",
         "tsc-watch": "^4.4.0",
         "typescript": "^4.3.4"
