--- a/api/package.json
+++ b/api/package.json
@@ -4,15 +4,17 @@
     "scripts": {
         "build": "tsc --project ./",
         "watch": "tsc-watch --project ./",
-        "dev": "npm run watch -- --onSuccess \"node ./build/app.js\"",
+        "dev": "npm run watch -- --onSuccess \"node -r dotenv/config ./build/app.js\"",
         "lint": "eslint . --ext .ts,.tsx"
     },
     "dependencies": {
-        "express": "^4.17.1",
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.10",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.12",
         "@types/node": "^15.12.4",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
