--- a/api/package.json
+++ b/api/package.json
@@ -8,11 +8,13 @@
         "lint": "eslint . --ext .ts,.tsx"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/cors": "^2.8.10",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.12",
