--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "extends": [
         "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
