--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig",
     "compilerOptions": {
         "module": "commonjs",
-        "outDir": "./build"
+        "outDir": "./build",
+        "target": "es2020"
     },
     "include": [ "**/*" ]
 }
