--- a/api/package.json
+++ b/api/package.json
@@ -11,14 +11,19 @@
         "axios": "^0.21.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "passport": "^0.4.1",
+        "passport-steam": "^1.0.15"
     },
     "devDependencies": {
         "@types/axios": "^0.14.0",
         "@types/cors": "^2.8.10",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.12",
+        "@types/jsonwebtoken": "^8.5.4",
         "@types/node": "^15.12.4",
+        "@types/passport": "^1.0.7",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
         "@typescript-eslint/parser": "^4.28.0",
         "eslint": "^7.29.0",
