--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
 # misc
 .DS_Store
 npm-debug.log*
-
-# next.js build output
-.next
-
-# dotenv environment variables file (build for Zeit Now)
 .env
-.env.build
-
-# Dependency directories
-node_modules/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/api/node_modules
