--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.1",
     "eslint-config-prettier": "^8.3.0",
+    "jsonwebtoken": "^8.5.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
