--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "eslint-config-prettier": "^8.3.0",
     "jsonwebtoken": "^8.5.1",
+    "material-icons": "^1.2.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
