--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,8 @@
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "express-validator": "^6.12.1",
+        "nanoid": "^3.1.25",
         "prettier": "^2.3.1",
         "tsc-watch": "^4.4.0",
         "typescript": "^4.3.4"
