Use https for server and other security improvements

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,10 @@
-PORT=9000
-BASE_URL="http://localhost:9000"
+PORT_HTTP=8999
+PORT_HTTPS=9000
+BASE_URL="https://localhost:9000"
 FRONTEND_URL="http://localhost:3000"
+
+TLS_CERT_FILE="tls/cert.pem"
+TLS_KEY_FILE="tls/key.pem"
 
 # JWT secret
 JWT_SECRET="my secret"
