--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
         "@types/cors": "^2.8.10",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.12",
+        "@types/express-rate-limit": "^5.1.3",
         "@types/jsonwebtoken": "^8.5.4",
         "@types/node": "^15.12.4",
         "@types/passport": "^1.0.7",
@@ -29,7 +30,9 @@
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "express-rate-limit": "^5.3.0",
         "express-validator": "^6.12.1",
+        "helmet": "^4.6.0",
         "nanoid": "^3.1.25",
         "prettier": "^2.3.1",
         "tsc-watch": "^4.4.0",
