--- a/client/package.json
+++ b/client/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "steamlibrarycompare-client",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/jsonwebtoken": "^8.5.4",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.16",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "axios": "^0.21.1",
-    "eslint-config-prettier": "^8.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "material-icons": "^1.2.0",
-    "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
-  }
+    "name": "steamlibrarycompare-client",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^12.20.19",
+        "@types/react": "^17.0.16",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-router-dom": "^5.1.8",
+        "axios": "^0.21.1",
+        "eslint-config-prettier": "^8.3.0",
+        "jose": "^4.8.3",
+        "material-icons": "^1.2.0",
+        "prettier": "^2.3.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^5.0.1",
+        "typescript": "^4.3.5",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "dev": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test"
+    }
 }
