--- a/client2/package.json
+++ b/client2/package.json
@@ -13,9 +13,9 @@
         "@sveltejs/vite-plugin-svelte": "^1.0.1",
         "@tsconfig/svelte": "^3.0.0",
         "axios": "^0.27.2",
+        "bootstrap-icons": "^1.9.1",
         "fuse.js": "^6.6.2",
         "jose": "^4.8.3",
-        "material-icons": "^1.11.8",
         "prettier": "^2.7.1",
         "prettier-plugin-svelte": "^2.7.0",
         "svelte": "^3.49.0",
