--- a/client2/package.json
+++ b/client2/package.json
@@ -14,6 +14,7 @@
         "@tsconfig/svelte": "^3.0.0",
         "axios": "^0.27.2",
         "bootstrap-icons": "^1.9.1",
+        "date-fns": "^2.29.1",
         "fuse.js": "^6.6.2",
         "jose": "^4.8.3",
         "prettier": "^2.7.1",
